# internal/institution/controller.go
@@ -5,13 +5,14 @@ import (
 	"net/http"
 
 	"github.com/ysomad/uniplay/internal/domain"
+	"github.com/ysomad/uniplay/internal/pkg/paging"
 
 	"github.com/ysomad/uniplay/internal/gen/swagger2/models"
 	"github.com/ysomad/uniplay/internal/gen/swagger2/restapi/operations/institution"
 )
 
 type institutionService interface {
-	GetInstitutionList(context.Context, domain.InstitutionFilter, domain.InstitutionPagination) ([]domain.Institution, error)
+	GetInstitutionList(context.Context, domain.InstitutionFilter, paging.IntSeek[int32]) (paging.InfList[domain.Institution], error)
 }
 
 type Controller struct {
@@ -25,26 +26,13 @@ func NewController(s institutionService) *Controller {
 }
 
 func (c *Controller) GetInstitutions(p institution.GetInstitutionsParams) institution.GetInstitutionsResponder {
-	var (
-		filter   domain.InstitutionFilter
-		pageSize int32
-		offset   int32
-	)
+	var filter domain.InstitutionFilter
 
-	switch {
-	case p.ShortName != nil:
+	if p.ShortName != nil {
 		filter.ShortName = *p.ShortName
-	case p.PageSize != nil:
-		pageSize = *p.PageSize
-	case p.Offset != nil:
-		offset = *p.Offset
 	}
 
-	institutions, err := c.institution.GetInstitutionList(
-		p.HTTPRequest.Context(),
-		filter,
-		domain.NewInstitutionPagination(pageSize, offset),
-	)
+	list, err := c.institution.GetInstitutionList(p.HTTPRequest.Context(), filter, paging.NewIntSeek(p.LastID, p.PageSize))
 	if err != nil {
 		return institution.NewGetInstitutionsInternalServerError().WithPayload(&models.Error{
 			Code:    http.StatusInternalServerError,
@@ -52,16 +40,19 @@ func (c *Controller) GetInstitutions(p institution.GetInstitutionsParams) instit
 		})
 	}
 
-	payload := make(models.InstitutionList, len(institutions))
+	payload := models.InstitutionList{
+		Institutions: make([]models.InstitutionListItem, len(list.Items)),
+		HasNext:      list.HasNext,
+	}
 
-	for i, institution := range institutions {
-		payload[i] = models.InstitutionListInner{
-			ID:        int32(institution.ID),
-			Name:      institution.Name,
-			ShortName: institution.ShortName,
-			LogoURL:   institution.LogoURL,
+	for i, inst := range list.Items {
+		payload.Institutions[i] = models.InstitutionListItem{
+			ID:        inst.ID,
+			Name:      inst.Name,
+			ShortName: inst.ShortName,
+			LogoURL:   inst.LogoURL,
 		}
 	}
 
-	return institution.NewGetInstitutionsOK().WithPayload(payload)
+	return institution.NewGetInstitutionsOK().WithPayload(&payload)
 }
